--- a/index.html
+++ b/index.html
@@ -444,7 +444,9 @@
       <div class="services-grid">
         <article class="card">
           <div class="card-header">
-            <input type="checkbox" id="svc-audit" onchange="syncService('Automation System Health Audit',this.checked)">
+            <input type="checkbox" id="svc-audit"
+  aria-label="Automation System Health Audit"
+  onchange="syncService('Automation System Health Audit',this.checked)">
             <div>
               <h3>Automation System Health Audit</h3>
               <small>Check‑up of your existing control system</small>
@@ -461,7 +463,9 @@
 
         <article class="card">
           <div class="card-header">
-            <input type="checkbox" id="svc-backup" onchange="syncService('PLC & HMI Program Backup Service',this.checked)">
+            <input type="checkbox" id="svc-backup"
+  aria-label="PLC and HMI Program Backup Service"
+  onchange="syncService('PLC & HMI Program Backup Service',this.checked)">
             <div>
               <h3>PLC &amp; HMI Program Backup Service</h3>
               <small>Protect your programs before hardware fails</small>
@@ -477,7 +481,9 @@
         </article>
         <article class="card">
           <div class="card-header">
-            <input type="checkbox" id="svc-roadmap" onchange="syncService('Legacy Control System Upgrade Roadmap',this.checked)">
+            <input type="checkbox" id="svc-roadmap"
+  aria-label="Legacy Control System Upgrade Roadmap"
+  onchange="syncService('Legacy Control System Upgrade Roadmap',this.checked)">
             <div>
               <h3>Legacy Control System Upgrade Roadmap</h3>
               <small>Step‑by‑step modernization plan</small>
@@ -494,7 +500,9 @@
 
         <article class="card">
           <div class="card-header">
-            <input type="checkbox" id="svc-planning" onchange="syncService('Control System Migration Planning',this.checked)">
+            <input type="checkbox" id="svc-planning"
+  aria-label="Control System Migration Planning"
+  onchange="syncService('Control System Migration Planning',this.checked)">
             <div>
               <h3>Control System Migration Planning</h3>
               <small>Plan brand‑to‑brand PLC changes</small>
@@ -518,7 +526,9 @@
       <div class="services-grid">
         <article class="card">
           <div class="card-header">
-            <input type="checkbox" id="svc-plc-rewrite" onchange="syncService('Complete PLC Program Re‑Engineering',this.checked)">
+            <input type="checkbox" id="svc-plc-rewrite"
+  aria-label="Complete PLC Program Re-Engineering"
+  onchange="syncService('Complete PLC Program Re-Engineering',this.checked)">
             <div>
               <h3>Complete PLC Program Re‑Engineering</h3>
               <small>Rebuild legacy PLC code on a modern controller</small>
@@ -535,7 +545,9 @@
 
         <article class="card">
           <div class="card-header">
-            <input type="checkbox" id="svc-hmi" onchange="syncService('HMI Application Redesign & Tag Mapping',this.checked)">
+            <input type="checkbox" id="svc-hmi"
+  aria-label="HMI Application Redesign and Tag Mapping"
+  onchange="syncService('HMI Application Redesign & Tag Mapping',this.checked)">
             <div>
               <h3>HMI Application Redesign &amp; Tag Mapping</h3>
               <small>New operator screens matched to the new PLC program</small>
@@ -552,7 +564,9 @@
 
         <article class="card">
           <div class="card-header">
-            <input type="checkbox" id="svc-turnkey" onchange="syncService('Turnkey PLC & HMI Migration (Full Re‑Engineering)',this.checked)">
+            <input type="checkbox" id="svc-turnkey"
+  aria-label="Turnkey PLC and HMI Migration"
+  onchange="syncService('Turnkey PLC & HMI Migration (Full Re-Engineering)',this.checked)">
             <div>
               <h3>Turnkey PLC &amp; HMI Migration</h3>
               <small>Full re‑engineering from old to new platform</small>
@@ -569,7 +583,9 @@
 
         <article class="card">
           <div class="card-header">
-            <input type="checkbox" id="svc-mods" onchange="syncService('PLC & HMI Program Modifications / Feature Upgrades',this.checked)">
+            <input type="checkbox" id="svc-mods"
+  aria-label="PLC and HMI Program Modifications"
+  onchange="syncService('PLC & HMI Program Modifications / Feature Upgrades',this.checked)">
             <div>
               <h3>PLC &amp; HMI Program Modifications / Feature Upgrades</h3>
               <small>Smaller changes and improvements to existing systems</small>
@@ -586,7 +602,9 @@
 
         <article class="card">
           <div class="card-header">
-            <input type="checkbox" id="svc-support" onchange="syncService('On‑Call Automation Support',this.checked)">
+            <input type="checkbox" id="svc-support"
+  aria-label="On-Call Automation Support"
+  onchange="syncService('On-Call Automation Support',this.checked)">
             <div>
               <h3>On‑Call Automation Support</h3>
               <small>Help when automation issues affect production</small>
