--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <meta name="twitter:title" content="AzovNorth Industries | Industrial Automation & Controls">
 <meta name="twitter:description" content="Industrial automation, PLC and HMI programming, control system audits, and modernization planning in Winnipeg and Manitoba.">
 <meta name="twitter:image" content="https://www.azovnorth.ca/og-image.jpg">
+  <link rel="manifest" href="/manifest.json">
   <!-- Canonical URL -->
   <link rel="canonical" href="https://www.azovnorth.ca/">
   <script type="application/ld+json">
