--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <meta name="twitter:description" content="Industrial automation, PLC and HMI programming, control system audits, and modernization planning in Winnipeg and Manitoba.">
 <meta name="twitter:image" content="https://www.azovnorth.ca/og-image.jpg">
   <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#050814">
   <!-- Canonical URL -->
   <link rel="canonical" href="https://www.azovnorth.ca/">
   <script type="application/ld+json">
