--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ a, button {
       padding: 0.5rem 1rem;         /* adjust size to reach at least 48px height */
       line-height: 0.5;             /* increase vertical click area */
       min-height: 48px;             /* ensures minimum height */
-      margin: 0.25rem 0;            /* space between interactive elements */
+      margin: 0 0.25rem; /* horizontal spacing for nav links */
 }
   </style>
 </head>
