--- a/index.html
+++ b/index.html
@@ -387,6 +387,13 @@
 .checkbox-row label{
   cursor:pointer;
 }
+    .contact-cols .box:first-child a {
+  display: inline-block;   /* ensures padding counts for height */
+  padding: 0.5rem 1rem;    /* increase clickable area */
+  min-height: 48px;        /* ensures minimum height for touch */
+  line-height: 0.5;        /* extra spacing inside links */
+  margin-bottom: 0.25rem;  /* space between links */
+}
   </style>
 </head>
 <body>
