--- a/index.html
+++ b/index.html
@@ -393,6 +393,8 @@
   min-height: 16px;        /* ensures minimum height for touch */
   line-height: 0.25;        /* extra spacing inside links */
   margin-bottom: 0.25rem;  /* space between links */
+      font-size: 1.2rem;       /* increase font size */
+  font-weight: 600;        /* optional: make it stand out more */
 }
   </style>
 </head>
