--- a/index.html
+++ b/index.html
@@ -395,6 +395,10 @@
   margin-bottom: 0.25rem;  /* space between links */
       font-size: 1.0rem;       /* increase font size */
 }
+    .contact-items {
+  display: block;
+  margin-top: 1.0rem; /* space between label and first number */
+}
   </style>
 </head>
 <body>
@@ -751,7 +755,11 @@
       <div class="contact-cols">
         <div class="box">
           <h3>Direct Contact</h3>
-          <p class="small"><strong>Phone:</strong><br><a href="tel:+12042926667">(204) 292-6667</a><br><a href="tel:+12048696305">(204) 869-6305</a></p>
+          <p class="small"><strong>Phone:</strong><br>
+            <span class="contact-items">
+    <a href="tel:+12042926667">(204) 292-6667</a><br>
+    <a href="tel:+12048696305">(204) 869-6305</a>
+  </span>
           <p class="small" style="margin-top:0.4rem;"><strong>Email:</strong><br><a href="mailto:billy.fuller@azovnorth.ca">billy.fuller@azovnorth.ca</a><br><a href="mailto:matvii.ianchenko@azovnorth.ca">matvii.ianchenko@azovnorth.ca</a></p>
           <p class="small" style="margin-top:0.4rem;"><strong>Location:</strong><br>Winnipeg, Manitoba, Canada</p>
         </div>
