--- a/index.html
+++ b/index.html
@@ -760,7 +760,13 @@
     <a href="tel:+12042926667">(204) 292-6667</a><br>
     <a href="tel:+12048696305">(204) 869-6305</a>
   </span>
-          <p class="small" style="margin-top:0.4rem;"><strong>Email:</strong><br><a href="mailto:billy.fuller@azovnorth.ca">billy.fuller@azovnorth.ca</a><br><a href="mailto:matvii.ianchenko@azovnorth.ca">matvii.ianchenko@azovnorth.ca</a></p>
+         <p class="small" style="margin-top:0.4rem;">
+  <strong>Email:</strong><br>
+  <span class="contact-items">
+    <a href="mailto:billy.fuller@azovnorth.ca">billy.fuller@azovnorth.ca</a><br>
+    <a href="mailto:matvii.ianchenko@azovnorth.ca">matvii.ianchenko@azovnorth.ca</a>
+  </span>
+</p>
           <p class="small" style="margin-top:0.4rem;"><strong>Location:</strong><br>Winnipeg, Manitoba, Canada</p>
         </div>
         <div class="box">
