--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#050814">
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://www.azovnorth.ca/">
+  <link rel="canonical" href="https://azovnorth.ca/">
   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
