--- a/index.html
+++ b/index.html
@@ -404,11 +404,14 @@
 <body>
   <header>
   <div style="display:flex;align-items:center;gap:0.5rem;">
-    <img src="logo.webp"
-     alt="AzovNorth Industries Logo"
-     class="logo"
-     width="300"
-     height="75">
+    <picture>
+  <source srcset="logo.webp" type="image/webp">
+  <img src="logo.png"
+       alt="AzovNorth Industries Logo"
+       class="logo"
+       width="300"
+       height="75">
+</picture>
   </div>
   <nav class="top-nav">
     <button type="button" onclick="scrollToId('services')">Services</button>
