--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@ footer a:hover {
   <div class="social">
     <span>
       Find us on Google:
-      <a href="https://share.google/o7OQdA2MX1aoFpYw6"
+      <a href="https://maps.app.goo.gl/ea684y9342Y9qiMt7"
          target="_blank"
          rel="noopener">
         AzovNorth Industries – Winnipeg
