--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     "postalCode": "R2L 1Z6",
     "addressCountry": "CA"
   },
+    "sameAs": [
+    "https://maps.app.goo.gl/ea684y9342Y9qiMt7"
+  ]
   "areaServed": {
     "@type": "AdministrativeArea",
     "name": "Manitoba"
