--- a/index.html
+++ b/index.html
@@ -20,38 +20,40 @@
   <meta name="theme-color" content="#050814">
   <!-- Canonical URL -->
   <link rel="canonical" href="https://azovnorth.ca/">
+  
   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "ProfessionalService",
+  "@type": "LocalBusiness",
   "name": "AzovNorth Industries",
   "url": "https://www.azovnorth.ca",
-  "description": "Industrial automation, PLC and HMI programming, control system audits, and modernization planning.",
+  "description": "Industrial automation, PLC and HMI programming, control system audits, and modernization planning in Winnipeg, Manitoba.",
+  "logo": "https://www.azovnorth.ca/logo.webp",
+  "image": "https://www.azovnorth.ca/og-image.jpg",
+  "telephone": "+1-204-292-6667",
+  "email": "azovnorth@gmail.com",
   "address": {
     "@type": "PostalAddress",
+    "streetAddress": "310 Milford St", 
     "addressLocality": "Winnipeg",
     "addressRegion": "MB",
     "postalCode": "R2L 1Z6",
     "addressCountry": "CA"
   },
-    "sameAs": [
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 49.8951,
+    "longitude": -97.1384
+  },
+  "areaServed": "Manitoba",
+  "sameAs": [
     "https://www.google.com/maps/place/?q=place_id:ChIJNdXarcFw6lIRRRPMwQ0yoQ4"
   ],
-  "areaServed": {
-    "@type": "AdministrativeArea",
-    "name": "Manitoba"
-  },
-  "telephone": [
-    "+1-204-292-6667",
-    "+1-204-869-6305"
-  ],
-  "email": [
-    "billy.fuller@azovnorth.ca",
-    "matvii.ianchenko@azovnorth.ca",
-    "azovnorth@gmail.com"
-  ]
+  "openingHours": "Mo-Fr 08:00-18:00",
+  "priceRange": "$$"
 }
 </script>
+
   <style>
     :root{
       --bg-dark:#050814;
