--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
   "@context": "https://schema.org",
   "@type": "LocalBusiness",
   "name": "AzovNorth Industries",
-  "url": "https://www.azovnorth.ca",
+  "url": "https://azovnorth.ca",
   "description": "Industrial automation, PLC and HMI programming, control system audits, and modernization planning in Winnipeg, Manitoba.",
-  "logo": "https://www.azovnorth.ca/logo.webp",
-  "image": "https://www.azovnorth.ca/og-image.jpg",
+  "logo": "https://azovnorth.ca/logo.webp",
+  "image": "https://azovnorth.ca/og-image.jpg",
   "telephone": "+1-204-292-6667",
   "email": "azovnorth@gmail.com",
   "address": {
